# particle_simulator

./: .gitignore  CMakeLists.txt
data/: Output_example.json
includes/: antigravity.h  antimater.h  calculate_force.h  give_id.h  json_handler.h  negative.h  normal.h  particle.h  particle_generator.h  physics_engine.h  positive.h  simulation_data.h  simulation_data_base.h  simulation_data_from_file.h  simulation_data_generator.h  simulation_properties.h  split.h
src/: antigravity.cpp  antimater.cpp  json_handler.cpp  negative.cpp  normal.cpp  particle.cpp  particle_simulator.cpp  physics_engine.cpp  positive.cpp  simulation_data.cpp  simulation_data_base.cpp  simulation_data_from_file.cpp  simulation_data_generator.cpp  simulation_properties.cpp  split.cpp
tests/unit_tests/: CMakeLists.txt  UTests.cpp  tests_antigravity.cpp  tests_antimater.cpp  tests_json_handler.cpp  tests_negative.cpp  tests_normal.cpp  tests_physics_engine.cpp  tests_positive.cpp  tests_simulation_data_base.cpp  tests_simulation_data_from_file.cpp  tests_simulation_data_generator.cpp  tests_simulation_properties.cpp  tests_split.cpp
